Removed swagger documentation from code because github.com/swaggo/swag is very limited and to use it i need write more complex code
